<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.scan.ScanResultsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivResultsPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="-4dp"
                android:layout_marginEnd="-4dp"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_image_24"
                app:srcCompat="@drawable/ic_image_24"/>

            <TextView
                android:id="@+id/tvPredicted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/you_are_predicted"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivResultsPhoto" />

            <TextView
                android:id="@+id/tvPredictionResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/anemia_results"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPredicted" />

            <TextView
                android:id="@+id/tvPredictionDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/lorem_ipsum_short"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:background="@color/grey_light"
                android:gravity="center"
                android:padding="20dp"
                android:lineSpacingExtra="2dp"
                android:lineSpacingMultiplier="1.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPredictionResults" />

            <TextView
                android:id="@+id/tvWarning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/prediction_warning"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="italic"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPredictionDesc" />

            <Button
                android:id="@+id/viewHistoryButton"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="64dp"
                android:backgroundTint="@color/red"
                android:text="@string/go_to_scan_history"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWarning"
                tools:alpha="100" />

            <Button
                android:id="@+id/backHomeButton"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="64dp"
                android:backgroundTint="@color/red"
                android:text="@string/go_back_to_home"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewHistoryButton"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:alpha="100" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>